<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/action_sign_in"
    tools:context=".RegistrerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Por favor ingrese sus datos"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nombre"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etNombreReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="Name" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Apellido paterno"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etApellidoPReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="Name" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Apellido materno"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etApellidoMReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="Name" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Teléfono"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etPhoneReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Correo"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etMailReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calle"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etCalleReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Número"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etNumReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/app_name"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fecha de nacimiento"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etbirthDateReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="YYYY-MM-DD"
            android:inputType="date"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contraseña"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etPasswordReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnSendReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:minHeight="48dp"
            android:text="Registrarme"
            android:textColor="@color/white"/>

    </LinearLayout>
</ScrollView>